--- a/ref.bib
+++ b/ref.bib
@@ -312,3 +312,50 @@ abstract = {A three-dimensional numerical model is used to study seasonal connec
   volume={203},
   pages={102-113}
 }
+
+
+@article{joung2020imo,
+  title={The IMO initial strategy for reducing Greenhouse Gas (GHG) emissions, and its follow-up actions towards 2050},
+  author={Joung, Tae-Hwan and Kang, Seong-Gil and Lee, Jong-Kap and Ahn, Junkeon},
+  journal={Journal of International Maritime Safety, Environmental Affairs, and Shipping},
+  volume={4},
+  number={1},
+  pages={1--7},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+
+@misc{uk2021Operational,
+  title = {Operational standards for small vessels},
+  howpublished = {\url{https://www.gov.uk/operational-standards-for-small-vessels}},
+  author = {{UK Government}},
+  year = {2021},
+  note = {Accessed: 2021-08-30}
+}
+
+@misc{uk2021registration,
+  title = {UK Small ship registration},
+  howpublished = {\url{https://www.ukshipregister.co.uk/registration/leisure/}},
+  author = {{UK Ship Register}},
+  year = {2021},
+  note = {Accessed: 2021-08-30}
+}
+
+@misc{Mexico2021RegisteredVessels,
+  title = {Registered Vessels},
+  howpublished = {\url{https://www.conapesca.gob.mx/wb/cona/embarcaciones_registradas}},
+  author = {{Mexico National Aquaculture and Fisheries Commission}},
+  year = {2021},
+  note = {Accessed: 2021-08-30}
+}
+
+
+@misc{Lopez-Sagastegui2017Comparing,
+  title = {Comparing two fishing communities in the Upper Gulf of California
+},
+  howpublished = {\url{https://datamares.org/stories/comparing-two-fishing-communities-in-the-upper-gulf-of-california/?lang=comparing-two-fishing-communities-in-the-upper-gulf-of-california}},
+  author = {López-Sagástegui, Catalina and Mascareñas-Osorio, Ismael and Erisman, Brad and Moreno-Báez, Marcia and Jiménez-Esquivel, Victoria and  Aburto-Oropeza, Octavio},
+  year = {2017},
+  note = {Accessed: 2021-08-30}
+}
