--- a/suthesis.sty
+++ b/suthesis.sty
@@ -82,7 +82,7 @@ suthesis documentation.}}{}
 % needed only for dual language departments to choose the language
 \def\languagemajor#1{\gdef\@languagemajor{#1}} \def\@language{babel}
 \def\jointprogram#1{\gdef\@jointprogram{#1}}
-\def\@title{}\def\@author{}\def\@dept{BARTLETT SCHOOL OF ENVIRONMENT, ENERGY AND RESOURCES}
+\def\@title{}\def\@author{}\def\@dept{UCL ENERGY INSTITUTE}
 \def\@principaladviser{}\def\@firstreader{*}\def\@secondreader{*}
 \def\@coprincipaladviser{*}
 \def\@thirdreader{*}
@@ -170,7 +170,14 @@ AND THE COMMITTEE ON GRADUATE STUDIES}
                 OF UNIVERSITY COLLEGE LONDON\\
                 IN PARTIAL FULFILMENT OF THE REQUIREMENTS\\
                 FOR THE DEGREE OF\\
-                MASTER OF SCIENCE \uppercase\expandafter{\@whichend}\\
+                MASTER OF SCIENCE \uppercase\expandafter{\@whichend}\\\
+        \end{center}
+        \vfill
+        \begin{center}
+        UCL Energy Institute\\
+        The Bartlett School of Environment, Energy and Resources\\
+        The Bartlett Faculty of the Built Environment\\
+        University College London\\
         \end{center}
         \vfill
         \begin{center}
