--- a/thesis.tex
+++ b/thesis.tex
@@ -25,6 +25,7 @@
 \usepackage{epigraph}
 \renewcommand{\epigraphsize}{\normalsize}
 \setlength{\epigraphwidth}{0.9\textwidth}
+\usepackage{subcaption}
 
 % (tikz)
 \usepackage{soul}
@@ -124,7 +125,6 @@
 \chapter{Methodology}
 \label{chapter:Methodology}
 \input{chapters/Methodology}
-
 
 % Results
 \chapter{Results}
