--- a/ref.bib
+++ b/ref.bib
@@ -359,3 +359,76 @@ abstract = {A three-dimensional numerical model is used to study seasonal connec
   year = {2017},
   note = {Accessed: 2021-08-30}
 }
+
+
+
+@article{mcculloch1943logical,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={McCulloch, Warren S and Pitts, Walter},
+  journal={The bulletin of mathematical biophysics},
+  volume={5},
+  number={4},
+  pages={115--133},
+  year={1943},
+  publisher={Springer}
+}
+
+
+@article{hubel1962receptive,
+  title={Receptive fields, binocular interaction and functional architecture in the cat's visual cortex},
+  author={Hubel, David H and Wiesel, Torsten N},
+  journal={The Journal of physiology},
+  volume={160},
+  number={1},
+  pages={106--154},
+  year={1962},
+  publisher={Wiley Online Library}
+}
+
+@incollection{fukushima1982neocognitron,
+  title={Neocognitron: A self-organizing neural network model for a mechanism of visual pattern recognition},
+  author={Fukushima, Kunihiko and Miyake, Sei},
+  booktitle={Competition and cooperation in neural nets},
+  pages={267--285},
+  year={1982},
+  publisher={Springer}
+}
+
+@article{lecun1995convolutional,
+  title={Convolutional networks for images, speech, and time series},
+  author={LeCun, Yann and Bengio, Yoshua and others},
+  journal={The handbook of brain theory and neural networks},
+  volume={3361},
+  number={10},
+  pages={1995},
+  year={1995}
+}
+
+
+@misc{Dwivedi2020YOLOv5,
+  title = {YOLOv5 compared to Faster RCNN. Who wins?},
+  howpublished = {\url{https://towardsdatascience.com/yolov5-compared-to-faster-rcnn-who-wins-a771cd6c9fb4}},
+  author = {Dwivedi, Priya},
+  year = {2020},
+  note = {Accessed: 2021-08-30}
+}
+
+@software{glenn_jocher_2020_4154370,
+author = {Glenn Jocher},
+title = {{ultralytics/yolov5: v3.1 - Bug Fixes and
+Performance Improvements}},
+month = oct,
+year = 2020,
+publisher = {Zenodo},
+version = {v3.1},
+doi = {10.5281/zenodo.4154370},
+url = {https://doi.org/10.5281/zenodo.4154370},
+howpublished = {\url{https://github.com/ultralytics/yolov5}}
+}
+
+
+@article{lutherborrowship,
+  title={SHIP DETECTION IN SATELLITE IMAGERY VIA CONVOLUTIONAL NEURAL NETWORKS},
+  author={Lutherborrow, Tom and Agoub, Amgad and Kada, Martin},
+  year=2018
+}
