--- a/ref.bib
+++ b/ref.bib
@@ -444,3 +444,12 @@ howpublished = {\url{https://github.com/ultralytics/yolov5}}
   year={2021},
   publisher={Multidisciplinary Digital Publishing Institute}
 }
+
+@article{johnson12exequiel,
+  title={Exequiel Ezcurra, Octavio Aburto-Oropeza. 2017. A spatial method to calculate small-scale fisheries effort in data poor scenarios},
+  author={Johnson, Andrew Frederick and Moreno-B{\'a}ez, Marcia and Giron-Nava, Alfredo and Corominas, Julia and Erisman, Brad},
+  journal={Plos One},
+  volume={12},
+  number={4},
+  pages={e0174064}
+}
