--- a/thesis.tex
+++ b/thesis.tex
@@ -112,29 +112,34 @@
 % -- Sections --
 % Introduction
 \chapter{Introduction}
-\label{chapter:Introduction}
+\label{chap:1}
 \input{chapters/Introduction}
 
 
 % Literature Review
 \chapter{Literature Review}
-\label{chapter:Review}
+\label{chap:2}
 \input{chapters/Review}
 
 % Methodology
 \chapter{Methodology}
-\label{chapter:Methodology}
+\label{chap:3}
 \input{chapters/Methodology}
 
 % Results
 \chapter{Results}
-\label{chapter:Results}
+\label{chap:4}
 \input{chapters/Results}
 
+% Future
+\chapter{Future Work}
+\label{chap:5}
+\input{chapters/Future}
+
 % Conclusion
-\chapter{Conclusions and Future Work}
-\label{chapter:Conclusions_and_Future_Work}
-\input{chapters/Conclusions_and_Future_Work}
+\chapter{Conclusions}
+\label{chap:6}
+\input{chapters/Conclusions}
 
 % Bibliography
 \bibliographystyle{bartlett_harvard_ref}
